--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 	<p>Or if you do not want to signup click <a href="nav.html">this link to go straight to the navbar</a></p>
     </div>
     <script src="js/index/usernameSet.js"></script>
+    <script src="js/404/404.js"></script>
   </body>
 </html>
