--- a/nav.html
+++ b/nav.html
@@ -15,7 +15,13 @@
        	</form>
         <ul>
     	 <li><a href="index.html" class="homeLink">Home</a></li>
-         <li><a href="signup.php" class="signupLink">Signup</a></li>
+         <script>
+		 if(!localStorage.getItem("username") || localStorage.getItem("usernameSet")){
+			 document.write("<li><a href='signup.html' class='signupLink'>Signup</a></li>");
+		 }else{
+			 document.write("<li><a href='https://github.com/clipyplusplus/myWebsite/new/main'>Create a review</a>");
+		 }
+	 </script>
         </ul>
      </div>
    </body>
