--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h2>What can i do if i signup?</h2>
 	<p>If you signup you can create and like wikis, subscribe to other users etc</p>	
 	<p>If you want to signup click <a href="signup.php">this link to signup</a></p>
-	<p>Or if you do not want to signup click <a href="nav.html">this link to go straight to the navbar</a></p>
+	<p>Or if you do not want to signup click <a href="nav.html" onclick="localStorage.setItem('usernameSet')">this link to go straight to the navbar</a></p>
     </div>
     <script src="js/index/usernameSet.js"></script>
     <script src="js/404/404.js"></script>
