--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
 	document.getElementById("genre").style.height = "100px";
 	
 	document.getElementById("genre").style.width = "100px";
-   }); 
-  </script>
+   });
+   </script>
+	 
+   <!-- JavaSCript file for the 404 -->
+   <script src="js/404.js"></script>
  </body>
 </html>
