--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		
 		<!-- Div for important links -->
 		<div class="important-links">
-			<li><a href="review.html">Create an anime review</a></li>
+			<li><a href="https://github.com/animeReview/animeReview.github.io/new/version1/">Create an anime review</a></li>
 			<li><a id="genre-link" href="javascript:void(0);">Show Genre</a></li>
 			<li><a class="about-link" href="about.html">About</a></li>
 		</div>
