--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 			<!-- Div for important links -->
 			<div class="important-links">
 				<li><a href="signup.html">Signup</a></li>
-				<li><a href="review.html">Create an anime review</a></li>
+				<li><a href="https://github.com/animeReview/animeReview.github.io/new/version1/">Create an anime review</a></li>
 				<li><a id="genre-link" href="javascript:void(0);">Show Genre</a></li>
 				<li><a href="index.html" class="about-link">Home</a></li>
 			</div>
